# qa_guru_5_18_work_poetry

./: pyproject.toml
