[tool.poetry]
name = "qa_guru_5_18_work_poetry"
version = "0.1.0"
description = ""
authors = ["Dmitrii <dalariono1@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "7.3.1"
selene = "2.0.0rc2"

[tool.poetry.dev-dependencies]
pylint = "3.0.0a6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
